# N64ModernRuntime

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: validate.yml
librecomp/: CMakeLists.txt
librecomp/include/: recomp.h  recomp_game.h  recomp_helpers.h  recomp_input.h  recomp_overlays.h  rsp.h  rsp_vu.h
librecomp/include/librecomp/: addresses.hpp  config.hpp  config_store.hpp  files.hpp  game.hpp  gfx.hpp  helpers.hpp  mods.hpp  overlays.h  overlays.hpp  patcher.hpp  recomp.h  rsp.hpp  rsp_vu_impl.hpp  save.hpp  sections.h
librecomp/include/recomp/: recomp.h
librecomp/src/: ai.cpp  config.cpp  config_option.cpp  config_store.cpp  cont.cpp  dp.cpp  eep.cpp  euc-jp.cpp  extensions.cpp  files.cpp  flash.cpp  heap.cpp  math_routines.cpp  mod_config_api.cpp  mod_events.cpp  mod_hooks.cpp  mod_manifest.cpp  mods.cpp  overlays.cpp  pak.cpp  patch_loading.cpp  patcher.cpp  pfs.cpp  pi.cpp  print.cpp  recomp.cpp  rsp.cpp  save.cpp  sp.cpp  ultra_stubs.cpp  ultra_translation.cpp  vi.cpp
librecomp/src/config/: CallbackRegistry.cpp  CallbackRegistry.hpp  ConfigOption.cpp  ConfigOption.hpp  ConfigRegistry.cpp  ConfigRegistry.hpp  ConfigStore.cpp  ConfigStore.hpp
ultramodern/: CMakeLists.txt
ultramodern/include/: config.hpp  rt64_layer.h  ultra64.h  ultramodern.hpp
ultramodern/include/ultramodern/: audio.hpp  config.hpp  error_handling.hpp  events.hpp  extensions.h  files.hpp  input.hpp  recomp_ui.h  renderer_context.hpp  renderer_wrapper.hpp  rsp.hpp  rsp_stuff.hpp  rt64_layer.h  save.hpp  threads.hpp  ultra64.h  ultramodern.hpp  ultramodern_tracy.hpp  user_callbacks.hpp
ultramodern/src/: audio.cpp  cont.cpp  controller_pak.hpp  error_handling.cpp  events.cpp  extensions.cpp  files.cpp  input.cpp  mesgqueue.cpp  misc_ultra.cpp  pak.cpp  pfs.cpp  pfs.hpp  port_main.c  renderer_context.cpp  renderer_wrapper.cpp  rsp.cpp  rt64_layer.cpp  save.cpp  scheduling.cpp  task_win32.cpp  threadqueue.cpp  threads.cpp  timer.cpp  ultrainit.cpp  user_callbacks.cpp
